XWIKI-21650: The XModal close button new style does not fit in its context * Updated style of the title section of the xdialog * Added the class btn-xs to the close button (avoid it being way too large ) * Replaced the content with a cross icon (no need for alternative because there's a title on the button)

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/js/xwiki/widgets/modalPopup.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/js/xwiki/widgets/modalPopup.css
@@ -42,34 +42,27 @@
     width: 400px; /* Should be: @modal-md */
   }
 }
-.xdialog-box .xdialog-content {
+.xdialog-box .xdialog-content,
+.xdialog-box > .xdialog-close {
   margin: .8em;
 }
-.xdialog-close {
+.xdialog-box > .xdialog-close {
   float: right;
-  margin-right: .8em;
 }
 .xdialog-title .xdialog-close {
   font-size: 1.25em;
-  margin-right: -0.56em;
-  margin-top: -0.24em;
   color: $theme.panelHeaderTextColor;
 }
 .xdialog-title {
-  font-size: 80%;
-  font-weight: bold;
-  padding: .3em 1.2em .3em .8em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
   background-color: $theme.panelHeaderBackgroundColor;
-  #css3_backgroundLinearGradient({
-     'to': 'bottom',
-     'colors': [
-      {'color': $theme.panelHeaderGradientColor, 'position': '0%'},
-      {'color': $theme.panelHeaderBackgroundColor, 'position': '100%'}
-    ]
-  })
   border-radius: 7px 7px 0 0;
+  font-weight: bold;
+  font-size: 110%;
   color: $theme.panelHeaderTextColor;
-  text-shadow: 0 1px 0 $theme.panelHeaderGradientColor;
 }
 .xdialog-box .xform {
   width: 100%;
